--- a/Contact/css/Contact.css
+++ b/Contact/css/Contact.css
@@ -1,324 +1,48 @@
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
+
+
 
 /* telefoon */
 @media screen and (min-width: 360px) and (max-width:740px){
-    #header1 img {
-        height: 70px;
-        position: relative;
-        left: 95px;
-        top: 5px;
-    }
-
-    header li {
-        display: none;
-    }
-
-    #nav2 {
-        color: black;
-        font-family: 'Nunito', sans-serif;
-    }
-
-
-    :root {
-        --primary-color: rgba(0, 0, 0, 0.75);
-        --overlay-color: rgba(0, 0, 0, 0.85);
-        --menu-speed: 0.75s;
-      }
-
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: 'Roboto', sans-serif;
-        line-height: 1.4;
-      }
-
-      .container {
-        max-width: 700px;
-        margin: auto;
-        overflow: hidden;
-        padding: 0 3rem;
-      }
-
-      .showcase {
-        background: var(--primary-color);
-        color: #fff;
-        height: 100vh;
-        position: relative;
-      }
-
-      .showcase:before {
-        content: '';
-        background: url('https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center center/cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-      }
-
-      .showcase .showcase-inner {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100%;
-      }
-
-      .showcase h1 {
-        font-size: 4rem;
-      }
-
-      .showcase p {
-        font-size: 1.3rem;
-      }
-
-      .btn {
-        display: inline-block;
-        border: none;
-        background: var(--primary-color);
-        color: #fff;
-        padding: 0.75rem 1.5rem;
-        margin-top: 1rem;
-        transition: opacity 1s ease-in-out;
-        text-decoration: none;
-      }
-
-      .btn:hover {
-        opacity: 0.7;
-      }
-
-      /* MENU STYLES */
-      .menu-wrap {
-        position: relative;
-        top: -65px;
-        left: 0;
-        z-index: 1;
-      }
-
-      .menu-wrap .toggler {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        cursor: pointer;
-        width: 50px;
-        height: 50px;
-        opacity: 0;
-      }
-
-      .menu-wrap .hamburger {
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
-        width: 60px;
-        height: 60px;
-        padding: 1rem;
-        background: var(--primary-color);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      /* Hamburger Line */
-      .menu-wrap .hamburger > div {
-        position: relative;
-        flex: none;
-        width: 100%;
-        height: 2px;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.4s ease;
-      }
-
-      /* Hamburger Lines - Top & Bottom */
-      .menu-wrap .hamburger > div::before,
-      .menu-wrap .hamburger > div::after {
-        content: '';
-        position: absolute;
-        z-index: 1;
-        top: -10px;
-        width: 100%;
-        height: 2px;
-        background: inherit;
-      }
-
-      /* Moves Line Down */
-      .menu-wrap .hamburger > div::after {
-        top: 10px;
-      }
-
-      /* Toggler Animation */
-      .menu-wrap .toggler:checked + .hamburger > div {
-        transform: rotate(135deg);
-      }
-
-      /* Turns Lines Into X */
-      .menu-wrap .toggler:checked + .hamburger > div:before,
-      .menu-wrap .toggler:checked + .hamburger > div:after {
-        top: 0;
-        transform: rotate(90deg);
-      }
-
-      /* Rotate On Hover When Checked */
-      .menu-wrap .toggler:checked:hover + .hamburger > div {
-        transform: rotate(225deg);
-      }
-
-      /* Show Menu */
-      .menu-wrap .toggler:checked ~ .menu {
-        visibility: visible;
-      }
-
-      .menu-wrap .toggler:checked ~ .menu > div {
-        transform: scale(1);
-        transition-duration: var(--menu-speed);
-      }
-
-      .menu-wrap .toggler:checked ~ .menu > div > div {
-        opacity: 1;
-        transition:  opacity 0.4s ease 0.4s;
-      }
-
-      .menu-wrap .menu {
-        position: fixed;
-        top: 1;
-        left: -30;
-        width: 100%;
-        height: 100%;
-        visibility: hidden;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .menu-wrap .menu > div {
-        background: var(--overlay-color);
-        border-radius: 50%;
-        position: relative;
-        left: -115px;
-        top: -120px;
-        width: 150vw;
-        height: 150vw;
-        display: flex;
-        flex: none;
-        align-items: center;
-        justify-content: center;
-        transform: scale(0);
-        transition: all 0.4s ease;
-      }
-
-      .menu-wrap .menu > div > div {
-        text-align: center;
-        max-width: 5vw;
-        max-height: 100vh;
-        opacity: 0;
-        transition: opacity 0.4s ease;
-      }
-
-      .menu-wrap .menu > div > div > ul > li {
-        list-style: none;
-        color: #fff;
-        font-size: 1.5rem;
-        padding: 1rem;
-      }
-
-      .menu-wrap .menu > div > div > ul > li > a {
-        color: inherit;
-        text-decoration: none;
-        transition: color 0.4s ease;
-      }
-
+body {
+    margin: 0 auto;
+    padding: 0;}
+    display: flex;
 }
 /* Tablet */
 @media only screen and (max-width:1024px) and (min-width: 768px){
-    #item-burger {
-        display: none;
-    }
-
-    #header1 img {
-        height: 70px;
-        position: relative;
-        left: 2px;
-    }
-
-    nav a {
-        text-decoration: none;
-        padding: 0vh 2vw;
-        font-size: 1.5rem;
-        position: relative;
-        left: 1px;
-        color: white;
-        font-family: 'Nunito', sans-serif;
-        top: 1px;
-    }
-
-    nav a:hover {
-        background-color: #3d4d58;
-    }
-
-    header li {
-        list-style: none;
-    }
-
-    .menu-wrap {
-        display: none;
-    }
-
-    .blok4 {
-        height: 45vh;
-        width: 70vw;
-        position: absolute;
-        z-index: -2;
-        Border: 1px solid black;
-        left: 210px;
-        top: 550px;
-    }
+body {
+    margin: 0 auto;
+    padding: 0;}
+    display: flex;
 }
 
+
 /* Desktop*/
-@media only screen and (max-width:1600px) and (min-width: 1024px){
-    *   {
-        margin: 0 auto;
-        padding: 0 auto;
+@media only screen and (max-width:1440px) and (min-width: 900px){
+
+    body {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    }
+
+    header {
+      width: 25vw;
+      color: white;
+      background-colour: black;
+    }
+
+    main{
+      width: 25;
+      background-colour: purple;
+    }
+
+    Naam {
 
     }
 
-    #item-burger {
-        display: none;
-    }
-
-    #header1 img {
-        height: 100px;
-        position: relative;
-        top: 10px;
-    }
-
-    nav a {
-        text-decoration: none;
-        padding: 0vh 2vw;
-        font-size: 1.5rem;
-        position: relative;
-        left: 20px;
-        color: white;
-        font-family: 'Nunito', sans-serif;
-        top: 20px;
-    }
-
-    nav a:hover {
-        background-color: #3d4d58;
-    }
-
-    header li {
-        list-style: none;
-    }
 }
