--- a/Aanbiedingen/css/style.css
+++ b/Aanbiedingen/css/style.css
@@ -98,7 +98,7 @@ main h3 {
 }
 
 /* mobiel */
-@media screen and (max-width: 740px) {
+@media screen and (min-width: 360px) and (max-width:740px){
     * {
     margin: 0;
 }
@@ -144,13 +144,19 @@ main h3 {
         background: white;
         font-family: 'Nunito', sans-serif;
         justify-content: center;
-        margin-left: 3vw;
+        margin-left: 20vw;
       }
+
+      #title h1{
+        font-size: 25px;
+      }
+
     .container {
         display: grid;
         grid-template-columns: auto;
         column-gap: 10px;
         padding: 10px;
+        margin-left: 13vw;
     
     }
     .aanbieding img{
@@ -167,7 +173,83 @@ main h3 {
 
       .aanbieding-img {
         background-color: rgba(236, 236, 236, 0.6);
-        width: 75%;
+        width: 55vw;
     }
     
+}
+
+@media only screen and (max-width:1024px) and (min-width: 768px){
+    * {
+        margin: 0;
+    }
+        body {
+            display: flex;
+        }
+        header {
+            display: none;
+        }
+        header img{
+            display: none;
+        }
+        header ul {
+            display: none;
+        }
+    
+        main {
+            position: flex;
+            
+        }
+        main img{
+            width: 1024px;
+            height: 100px;
+            object-fit: cover;
+            align-items: center;
+        }
+        #bar {
+            background-color: pink;
+            height: 45px;
+            width: 132vw;
+        }
+        main h3 {
+            flex-wrap: wrap;
+            text-align: center;
+            padding: 12px;
+        }
+        #title{
+            text-align: center;
+            padding-top: 10vh;
+            padding: 1px 9px 1px;
+            border-radius: 54px;
+            box-shadow: 0px 2px 7px grey;
+            background: white;
+            font-family: 'Nunito', sans-serif;
+            justify-content: center;
+            margin-left: 35vw;
+          }
+
+        .container {
+            display: grid;
+            grid-template-columns: auto;
+            column-gap: 10px;
+            padding: 10px;
+            margin-left: 13vw;
+        
+        }
+        .aanbieding img{
+            width: 250px;
+            height: 200px;
+            object-fit: "fill";
+            align-items: center;
+        }
+        .aanbieding {
+            text-align: center;
+            display: grid;
+            font-family: 'Nunito', sans-serif;
+          }
+    
+          .aanbieding-img {
+            background-color: rgba(236, 236, 236, 0.6);
+            width: 75%;
+        }
+
 }
